[package]
edition = "2021"
name = "pygamer-test"
version = "0.1.0"

[patch.crates-io]
atsamd-hal = {path = "../atsamd/hal"}
pygamer = {path = "../atsamd/boards/pygamer"}
rtic-time = {path = "../rtic/rtic-time"}

[dependencies]
atsamd-hal = {version = "0.18.2", features = ["rtic"]}
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
embedded-graphics = "0.8.1"
pygamer = {version = "0.11.0", features = ["rt"]}
rtic = {version = "2.1.1", features = ["thumbv7-backend"]}
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"]}

[features]
clock1k = []
clock32k = []
debug = []
mode0 = []
mode1 = []
systick = []

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed
opt-level = 2 # uncomment for neopixel functionality during debug

[profile.release]
lto = "fat"
opt-level = 's'
