[package]
edition = "2021"
name = "monotonic-test-stress"
version = "0.1.0"

[dependencies]
shared = {path = "../shared", features = ["rtic"]}

[features]
clock1k = ["shared/clock1k"]
clock32k = ["shared/clock32k"]
debug = ["shared/debug"]
mode0 = ["shared/mode0"]
mode1 = ["shared/mode1"]
systick = ["shared/systick"]
