[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
atsamd-hal = {version = "0.20", features = ["rtic"], optional = true}
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
embedded-graphics = "0.8.1"
fugit = "0.3.7"
pygamer = {version = "0.13.0", features = ["rt"]}
rtic = {version = "2.1.1", features = ["thumbv7-backend"], optional = true}
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"], optional = true}

[features]
clock1k = ["rtic"]
clock32k = ["rtic"]
debug = ["rtic"]
mode0 = ["rtic"]
mode1 = ["rtic"]
rtic = ["dep:atsamd-hal", "dep:rtic"]
systick = ["rtic", "dep:rtic-monotonics"]
